logs/dag_id=Projet_IDD/run_id=manual__2023-11-24T15:50:55.557950+00:00/task_id=create_key/attempt=1.log
[2023-11-24T15:51:10.520+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Projet_IDD.create_key manual__2023-11-24T15:50:55.557950+00:00 [queued]>
[2023-11-24T15:51:10.528+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Projet_IDD.create_key manual__2023-11-24T15:50:55.557950+00:00 [queued]>
[2023-11-24T15:51:10.529+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-11-24T15:51:10.542+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_key> on 2023-11-24 15:50:55.557950+00:00
[2023-11-24T15:51:10.547+0000] {standard_task_runner.py:57} INFO - Started process 1208 to run task
[2023-11-24T15:51:10.550+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Projet_IDD', 'create_key', 'manual__2023-11-24T15:50:55.557950+00:00', '--job-id', '43', '--raw', '--subdir', 'DAGS_FOLDER/ETL.py', '--cfg-path', '/tmp/tmpg69fiy8x']
[2023-11-24T15:51:10.553+0000] {standard_task_runner.py:85} INFO - Job 43: Subtask create_key
[2023-11-24T15:51:10.597+0000] {task_command.py:416} INFO - Running <TaskInstance: Projet_IDD.create_key manual__2023-11-24T15:50:55.557950+00:00 [running]> on host 1697b77d64fd
[2023-11-24T15:51:10.806+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Projet_IDD' AIRFLOW_CTX_TASK_ID='create_key' AIRFLOW_CTX_EXECUTION_DATE='2023-11-24T15:50:55.557950+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-24T15:50:55.557950+00:00'
[2023-11-24T15:51:10.808+0000] {sql.py:274} INFO - Executing: ALTER TABLE departements
ADD CONSTRAINT departements_num_dep_key
UNIQUE (num_dep);


ALTER TABLE urgences
ADD CONSTRAINT urgences_dep_fkey
FOREIGN KEY (dep)
REFERENCES departements (num_dep);

ALTER TABLE urgences
ADD CONSTRAINT urgences_sursaud_cl_age_corona_fkey
FOREIGN KEY (sursaud_cl_age_corona)

[2023-11-24T15:51:10.815+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-24T15:51:10.820+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-24T15:51:10.831+0000] {sql.py:418} INFO - Running statement: ALTER TABLE departements
ADD CONSTRAINT departements_num_dep_key
UNIQUE (num_dep);


ALTER TABLE urgences
ADD CONSTRAINT urgences_dep_fkey
FOREIGN KEY (dep)
REFERENCES departements (num_dep);

ALTER TABLE urgences
ADD CONSTRAINT urgences_sursaud_cl_age_corona_fkey
FOREIGN KEY (sursaud_cl_age_corona)
, parameters: None
[2023-11-24T15:51:10.836+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 14: 
         ^

[2023-11-24T15:51:10.843+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Projet_IDD, task_id=create_key, execution_date=20231124T155055, start_date=20231124T155110, end_date=20231124T155110
[2023-11-24T15:51:10.852+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 43 for task create_key (syntax error at end of input
LINE 14: 
         ^
; 1208)
[2023-11-24T15:51:10.885+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-24T15:51:10.903+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
